add has_element_in_any_list check in ElementAnimations::UpdateActivation

add has_element_in_any_list check in ElementAnimations::UpdateActivation during
PushProperities process. This solves a corner case if dom for animation be
removed before animation starts. See bug for details.

BUG=668086
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2527623002
Cr-Commit-Position: refs/heads/master@{#434862}

Former-commit-id: 7e190bb23bc08d98e305c4e2b367acf932a2d800